TI-57: Update order creation request and response format to align VFS provided example
